WIP: Account verification

--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -1,5 +1,5 @@
 <mat-card class="index-card">
-	<mat-card-title>
+	<mat-card-title style="margin: 10px 14px">
 		<mat-icon class="mat-icon-title-inline">visibility</mat-icon> My intel
 	</mat-card-title>
 	<mat-card-content>This page shows all intel collected by you. By default, new intel is shared with any indexes you are participating in.</mat-card-content>
