--- a/src/app/auth/profile/components/settings/settings.component.html
+++ b/src/app/auth/profile/components/settings/settings.component.html
@@ -2,5 +2,17 @@
 	<mat-card-title>
 		<mat-icon class="mat-icon-title-inline">settings</mat-icon> Settings
 	</mat-card-title>
-	<mat-card-content>settings enzo</mat-card-content>
+	<mat-card-content>
+
+		<br/>
+
+		<app-change-password></app-change-password>
+
+		<br/>
+		<hr>
+		<br/>
+
+		<app-delete-account></app-delete-account>
+
+	</mat-card-content>
 </mat-card>
