--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,8 @@ pre {
 .index-card {
   border-radius: 1rem !important;
   padding: 30px !important;
-  box-shadow: 0 0 30px 0 rgba(82,63,105,.05) !important;
+  //box-shadow: 0 0 30px 0 rgba(82,63,105,.05) !important;
+  box-shadow: 0px 0px 10px 1px #18333314 !important;
   margin: 12px !important;
   border: 0;
 
@@ -253,10 +254,16 @@ mat-paginator {
   margin: 0 14px 10px;
   background: white;
   border-radius: 1rem;
-  border: 2px solid #334254;
+  //border: 2px solid #334254;
+  box-shadow: 0px 0px 10px 1px #18333314 !important;
 
   a {
     color: #18bc9c !important;
+  }
+
+  mat-icon {
+    vertical-align: sub;
+    margin: 0 10px;
   }
 }
 
@@ -668,11 +675,26 @@ fieldset[disabled] .btn-primary.active {
   background-color: white;
 }
 
+.btn-danger {
+  .mat-icon {
+    font-size: 20px !important;
+    height: 20px !important;
+    width: 20px !important;
+    vertical-align: top !important;
+  }
+}
+
 .btn-secondary {
   color: #365063;
   background-color: #fbfbfb;
   border-color: #365063;
   font-weight: 700;
+  .mat-icon {
+    font-size: 20px !important;
+    height: 20px !important;
+    width: 20px !important;
+    vertical-align: top !important;
+  }
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
