--- a/src/app/alliance/alliance.component.html
+++ b/src/app/alliance/alliance.component.html
@@ -45,6 +45,10 @@
 	                <td>{{members}}</td>
 	              </tr>
 	              <tr>
+	                <th>Towns</th>
+	                <td>{{towns | NumberFilter}}</td>
+	              </tr>
+	              <tr>
 	                <th>Points</th>
 	                <td>{{points | NumberFilter}}</td>
 	              </tr>
