--- a/src/app/header/contact-dialog.html
+++ b/src/app/header/contact-dialog.html
@@ -7,10 +7,12 @@
 
 	  <div class="alert alert-gd-1 text-center" style="margin: 25px 0 0 0;">
 	    <div fxLayout="column" fxLayoutAlign="center center" style="width: 100% !important;">
-	      <mat-form-field  style="width: 100% !important; max-width: 500px !important;">
-	        <textarea [disabled]="loading" style="font-size: 20px;" [ngModel]="contact_message" (ngModelChange)="contact_message=$event" required matInput placeholder="Message" rows="4"></textarea>
+	      <mat-form-field  style="width: 100% !important; max-width: 500px !important;" appearance="outline">
+		      <mat-label>Your message</mat-label>
+	        <textarea [disabled]="loading" style="font-size: 20px;" [ngModel]="contact_message" (ngModelChange)="contact_message=$event" required matInput placeholder="Your message" rows="4"></textarea>
 	      </mat-form-field>
-	      <mat-form-field style="width: 100% !important; max-width: 500px !important;">
+	      <mat-form-field style="width: 100% !important; max-width: 500px !important;" appearance="outline">
+		      <mat-label>Email (optional)</mat-label>
 	        <input autocomplete="email" [disabled]="loading" [ngModel]="contact_mail" (ngModelChange)="contact_mail=$event" matInput placeholder="Email (optional)">
 	      </mat-form-field>
 
