--- a/src/app/auth/profile/components/linked-accounts/linked-accounts.component.scss
+++ b/src/app/auth/profile/components/linked-accounts/linked-accounts.component.scss
@@ -5,9 +5,16 @@
 }
 
 .linked-table {
-  text-align: left !important;
+  text-align: center !important;
+
+  th {
+    text-align: center !important;
+    vertical-align: middle;
+  }
+
   td {
-    text-align: left !important;
+    text-align: center !important;
+    vertical-align: middle;
   }
 }
 
