--- a/src/app/auth/profile/components/settings/settings.component.html
+++ b/src/app/auth/profile/components/settings/settings.component.html
@@ -1,18 +1,7 @@
-<mat-card class="index-card">
-	<mat-card-title>
-		<mat-icon class="mat-icon-title-inline">settings</mat-icon> Settings
-	</mat-card-title>
-	<mat-card-content>
-
-		<br/>
-
+<app-paper
+  icon="settings"
+  title="Settings">
 		<app-change-password></app-change-password>
-
-		<br/>
 		<hr>
-		<br/>
-
 		<app-delete-account></app-delete-account>
-
-	</mat-card-content>
-</mat-card>
+</app-paper>
