--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -1,8 +1,8 @@
-<mat-card class="index-card">
-	<mat-card-title>
-		<mat-icon class="mat-icon-title-inline">code</mat-icon> Install the in-game city indexer userscript using Tampermonkey
-	</mat-card-title>
-	<mat-card-content>
+<app-paper
+  icon="code"
+  title="In-game userscript"
+  description="Install the in-game city indexer userscript using Tampermonkey"
+  >
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
@@ -82,5 +82,4 @@
 			</div>
 
 		</div>
-	</mat-card-content>
-</mat-card>
+</app-paper>
