--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@ div[ng-view]{
 body {
   //background: #fbfbfb;
   background: #F5F6FA;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   //height: 100% !important;
 }
 
