--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -1,6 +1,5 @@
-<mat-card class="index-card">
-	<mat-card-title style="margin: 10px 14px">
-		<mat-icon class="mat-icon-title-inline">visibility</mat-icon> My intel
-	</mat-card-title>
-	<mat-card-content>This page shows all intel collected by you. By default, new intel is shared with any indexes you are participating in.</mat-card-content>
-</mat-card>
+<app-paper
+  icon="visibility"
+  title="My intel"
+  description="This page shows all intel collected by you. By default, new intel is shared with any indexes you are participating in.">
+</app-paper>
