--- a/src/app/auth/profile/components/linked-accounts/linked-accounts.component.html
+++ b/src/app/auth/profile/components/linked-accounts/linked-accounts.component.html
@@ -1,15 +1,10 @@
-<mat-card class="index-card">
-	<mat-card-title style="margin: 10px 14px">
-		<mat-icon class="mat-icon-title-inline">account_circle</mat-icon> Linked accounts
-	</mat-card-title>
-	<mat-card-content>
+<app-paper
+  icon="account_circle"
+  title="Linked accounts">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-12" *ngIf="!loading">
-
-					<div class="alert alert-gd-1">
-						<h3 class="gd-primary">Verify your Grepolis player name</h3>
-						<div class="faq-content" style="font-size: 20px;">
+					<app-alert title="Verify your Grepolis player name" type="info">
 							<p>
 								You can verify your Grepolis account by temporarily changing one of your town names.<br/><br/>
 								<a class="a-link-dialog" *ngIf="!moreinfo" (click)="moreinfo=true">More info..</a>
@@ -24,9 +19,8 @@
 								</span>
 								<a class="a-link-dialog" *ngIf="moreinfo" (click)="moreinfo=false"><br/>Less info..</a>
 							</p>
-						</div>
-					</div>
-				</div>
+            </app-alert>
+        </div>
 				<div class="col-xs-12">
 
 					<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
@@ -39,11 +33,9 @@
 								<th scope="col">Server</th>
 								<th scope="col">
 									Verification status
-									<mat-icon class="mat-icon-title-inline a-link" matTooltip="Your player name will be verified if you temporarily change one of your town names to the displayed token.">help_outline</mat-icon>
 								</th>
 								<th scope="col">
 									Verification town name
-									<mat-icon class="mat-icon-title-inline a-link" matTooltip="Change one of your town names to this token and wait a few hours. You can change your town name back to whatever you like, once your name is verified.">help_outline</mat-icon>
 								</th>
 								<th scope="col">Actions</th>
 							</tr>
@@ -53,9 +45,10 @@
 									<tr *ngIf="!account.unlinked">
 										<td><img src="../../assets/images/player_ico.png"/> {{account.player_name}}</td>
 										<td><mat-icon class="icon-margin"><div class="bg-flag flag-{{account.server}}"></div></mat-icon> {{account.server}}</td>
-										<td>
-											<span class="diff-neg" *ngIf="!account.confirmed" matTooltip="Change one of your town names to the token shown on the right. It may take a few hours for this to be processed.">Unverified <mat-icon class="mat-icon-title-inline">announcement</mat-icon></span>
-											<span class="diff-pos" *ngIf="account.confirmed">Verified <mat-icon class="mat-icon-title-inline">check_circle_outline</mat-icon></span>
+										<td [ngStyle]="!account.confirmed && { display: 'flex', justifyContent: 'center', alignItems: 'center'}">
+                      <app-badge type="error" text="Unverified" *ngIf="!account.confirmed" matTooltip="Change one of your town names to the token shown on the right. It may take a few hours for this to be processed."></app-badge>
+                      <mat-icon class="mat-icon-title-inline a-link" [ngStyle]="{ marginLeft: '5px' }" *ngIf="!account.confirmed" matTooltip="Your player name will be verified if you temporarily change one of your town names to the displayed token.">info_outline</mat-icon>
+                      <app-badge type="success" text="Verified" *ngIf="account.confirmed"></app-badge>
 										</td>
 										<td>
 											<div class="row" *ngIf="!account.confirmed && account.town_token != '' && account.town_token != 'error'">
@@ -72,7 +65,8 @@
 											<div *ngIf="!account.confirmed && account.town_token == 'error'">
 												<label style="font-weight: 200" class="diff-neg">Oops, something went wrong. Try reloading this page. </label>
 											</div>
-										</td>
+<!--                      <mat-icon class="mat-icon-title-inline a-link" [ngStyle]="{ marginLeft: '5px' }" *ngIf="!account.confirmed" matTooltip="Change one of your town names to this token and wait a few hours. You can change your town name back to whatever you like, once your name is verified.">info_outline</mat-icon>-->
+                    </td>
 										<td>
 											<button class="btn btn-secondary btn-sm" (click)="unlink(account)" *ngIf="!account.error">Unlink</button>
 											<span class="diff-neg" *ngIf="account.error">{{account.error}}</span>
@@ -87,10 +81,11 @@
 
 						<div class="container-fluid">
 							<div class="row">
-								<div class="col-xs-12 col-sm-12 col-md-8 col-lg-6">
-
-									<button *ngIf="!form_opened" (click)="form_opened=true" class="btn btn-primary">Verify new account <mat-icon>library_add</mat-icon></button>
-
+								<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" [ngStyle]="!form_opened && {display: 'flex', justifyContent: 'center', paddingTop: '50px'}">
+									<button *ngIf="!form_opened" (click)="form_opened=true" class="btn btn-primary">
+                    <span><mat-icon>add</mat-icon></span>
+                    <span>Verify new account</span>
+                  </button>
 									<div *ngIf="form_opened" class="new-acc-form-container">
 										<h4 class="gd-primary">Find your player name:</h4>
 										<button (click)="form_opened=false; players = []; searched = false;" class="btn btn-secondary" style="position: absolute; right: 20px; top: 5px;">Cancel</button>
@@ -161,7 +156,4 @@
 				</div>
 			</div>
 		</div>
-
-
-	</mat-card-content>
-</mat-card>
+</app-paper>
