--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,101 +1,64 @@
-
+<mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 0 : 0">
 <div class="text-center" *ngIf="!logged_in">
 	<div class="align-middle" style="position: relative; top: 250px; left: 25%; width: 50%;">
 		<h3 class="gd-primary"><strong>Logging in...</strong></h3>
 		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
 	</div>
 </div>
-
+  <mat-sidenav #snav id="snav" class="dark-sidebar pl-xs" [mode]="mobileQuery.matches ? 'side' : 'over'" fixedTopGap="0" [opened]="true" [disableClose]="mobileQuery.matches"  >
+    <app-sidebar [username]="username"></app-sidebar>
+  </mat-sidenav>
 <div class="profile-container" *ngIf="logged_in">
+		<app-alert type="error" title="Confirm your email address" *ngIf="!account_confirmed">
+				<p>
+          Your account is not yet verified. You can only share intel with others if your account is activated.
+        </p>
+      <p>
+        Click the link in the email you received to confirm and activate your account <strong>(check your spam folder!)</strong>.
+      </p>
+      <p>
+        <a class="a-link-dialog">Click here to request a new confirmation email</a>
+      </p>
+		</app-alert>
 
-	<div class="profile-sidebar" [ngClass]="{'collapsed': collapsed}">
-		<p *ngIf="username!='' && !collapsed" class="text-center">Logged in as <span class="gd-primary">{{username}}</span></p>
-		<a (click)="changeTab('intel')" [ngClass]="{'active': active_tab=='intel'}"><mat-icon>account_balance</mat-icon><span *ngIf="!collapsed"> My intel</span></a>
-		<a (click)="changeTab('linked')" [ngClass]="{'active': active_tab=='linked'}"><mat-icon>account_circle</mat-icon><span *ngIf="!collapsed"> Linked accounts</span></a>
-		<a (click)="changeTab('indexes')" [ngClass]="{'active': ['indexes', 'overview', 'player', 'alliance', 'town'].includes(active_tab)}"><mat-icon>groups</mat-icon><span *ngIf="!collapsed"> My alliances</span></a>
-		<!--<hr>-->
-		<!--<hr>-->
-		<!--<a (click)="changeTab('password')" [ngClass]="{'active': active_tab=='password'}"><mat-icon>vpn_key</mat-icon><span *ngIf="!collapsed"> Change password</span></a>-->
-		<!--<a (click)="changeTab('delete')" [ngClass]="{'active': active_tab=='delete'}"><mat-icon>delete_outline</mat-icon><span *ngIf="!collapsed"> Delete account</span></a>-->
-		<hr>
-		<a (click)="changeTab('script')" [ngClass]="{'active': active_tab=='script'}"><i class="fa fa-download" aria-hidden="true"></i><span *ngIf="!collapsed"> Get userscript</span></a>
-		<a (click)="changeTab('settings')" [ngClass]="{'active': active_tab=='settings'}"><mat-icon>settings</mat-icon><span *ngIf="!collapsed"> Settings</span></a>
-		<a (click)="changeTab('faq')" [ngClass]="{'active': active_tab=='faq'}"><mat-icon>help_center</mat-icon><span *ngIf="!collapsed"> Help</span></a>
-		<hr>
-		<a (click)="logout()"><mat-icon>login</mat-icon><span *ngIf="!collapsed">Logout</span></a>
+		<app-alert type="error" title="Verify your Grepolis player name" *ngIf="!account_linked && active_tab !== 'linked'">
+      <p>
+        You have not yet verified your Grepolis player name. You can only share intel with others if your player name is verified.
+      </p>
+      <p>
+				<a class="a-link-dialog" routerLink="/profile/linked">Request a new player verification here</a>
+      </p>
+		</app-alert>
 
-		<a (click)="collapsed=!collapsed" style="position: absolute; bottom: 0px; width: 300px;">
-			<span *ngIf="collapsed">
-				<mat-icon>keyboard_arrow_right</mat-icon>
-			</span>
-			<span *ngIf="!collapsed">
-				<mat-icon>keyboard_arrow_left</mat-icon> Hide menu
-			</span>
-		</a>
-	</div>
-
-	<!--<div class="expand" [ngClass]="{'collapsed': collapsed}" (click)="collapsed = !collapsed">-->
-		<!--<span *ngIf="collapsed">></span><span *ngIf="!collapsed"><</span>-->
-	<!--</div>-->
-
-	<div class="profile-content" [ngClass]="{'collapsed': collapsed}">
-
-		<div class="alert alert-gd-1 error" *ngIf="!account_confirmed" style="margin: 12px;">
-			<h2 class="gd-error">
-				<mat-icon style="font-size: 37px; vertical-align: sub;">warning</mat-icon>
-				&nbsp;Confirm your email address
-			</h2>
-			<div class="faq-content" style="font-size: 20px;">
-				Your account is not yet verified. You can only share intel with others if your account is activated.<br/>
-				Click the link in the email you received to confirm and activate your account <strong>(check your spam folder!)</strong>.<br/>
-				<br/><a class="a-link-dialog">Click here to request a new confirmation email</a>
-			</div>
-		</div>
-
-		<div class="alert alert-gd-1 error" *ngIf="!account_linked && active_tab !== 'linked'" style="margin: 12px;">
-			<h2 class="gd-error">
-				<mat-icon style="font-size: 37px; vertical-align: sub;">warning</mat-icon>
-				&nbsp;Verify your Grepolis player name
-			</h2>
-			<div class="faq-content" style="font-size: 20px;">
-				You have not yet verified your Grepolis player name. You can only share intel with others if your player name is verified.<br/>
-				<a class="a-link-dialog" routerLink="/profile/linked"><br/>Request a new player verification here</a>
-			</div>
-		</div>
-
-		<div class="profile-card">
-			<div *ngIf="active_tab === 'overview'">
-				<p class="gd-secondary profile-breadcrumbs">
-					<a class="a-link" routerLink="/profile/indexes">My indexes</a>
-					<mat-icon>arrow_forward_ios</mat-icon>Index <a routerLink="/profile/overview/{{active_index}}">{{active_index}}</a>
-				</p>
-				<app-indexer></app-indexer>
-			</div>
-			<div *ngIf="active_tab === 'player'">
-				<app-index-player></app-index-player>
-			</div>
-			<div *ngIf="active_tab === 'alliance'">
-				<app-index-alliance></app-index-alliance>
-			</div>
-			<div *ngIf="active_tab === 'town'">
-				<p class="gd-secondary profile-breadcrumbs">
-					<a class="a-link" routerLink="/profile/indexes">My indexes</a>
-					<mat-icon>arrow_forward_ios</mat-icon>Index <a routerLink="/profile/overview/{{active_index}}">{{active_index}}</a>
-					<mat-icon>arrow_forward_ios</mat-icon>Town
-				</p>
-				<app-index-town></app-index-town>
-			</div>
-			<span *ngIf="active_tab === 'script'"><app-userscript></app-userscript></span>
-			<span *ngIf="active_tab === 'intel'"><app-intel></app-intel></span>
-			<span *ngIf="active_tab === 'indexes'"><app-indexes></app-indexes></span>
-			<span *ngIf="active_tab === 'linked'"><app-linked-accounts></app-linked-accounts></span>
-			<span *ngIf="active_tab === 'settings'"><app-settings></app-settings></span>
-			<span *ngIf="active_tab === 'password'"><app-change-password></app-change-password></span>
-			<span *ngIf="active_tab === 'delete'"><app-delete-account></app-delete-account></span>
-			<span *ngIf="active_tab === 'faq'"><app-faq></app-faq></span>
-		</div>
-
-	</div>
+        <div *ngIf="active_tab === 'overview'">
+          <p class="gd-secondary profile-breadcrumbs">
+            <a class="a-link" routerLink="/profile/indexes">My indexes</a>
+            <mat-icon>arrow_forward_ios</mat-icon>Index <a routerLink="/profile/overview/{{active_index}}">{{active_index}}</a>
+          </p>
+          <app-indexer></app-indexer>
+        </div>
+        <div *ngIf="active_tab === 'player'">
+          <app-index-player></app-index-player>
+        </div>
+        <div *ngIf="active_tab === 'alliance'">
+          <app-index-alliance></app-index-alliance>
+        </div>
+        <div *ngIf="active_tab === 'town'">
+          <p class="gd-secondary profile-breadcrumbs">
+            <a class="a-link" routerLink="/profile/indexes">My indexes</a>
+            <mat-icon>arrow_forward_ios</mat-icon>Index <a routerLink="/profile/overview/{{active_index}}">{{active_index}}</a>
+            <mat-icon>arrow_forward_ios</mat-icon>Town
+          </p>
+          <app-index-town></app-index-town>
+        </div>
+    <span *ngIf="active_tab === 'intel'"><app-intel></app-intel></span>
+    <span *ngIf="active_tab === 'linked'"><app-linked-accounts></app-linked-accounts></span>
+    <span *ngIf="active_tab === 'indexes'"><app-indexes></app-indexes></span>
+    <span *ngIf="active_tab === 'script'"><app-userscript></app-userscript></span>
+    <span *ngIf="active_tab === 'settings'"><app-settings></app-settings></span>
+    <span *ngIf="active_tab === 'password'"><app-change-password></app-change-password></span>
+    <span *ngIf="active_tab === 'delete'"><app-delete-account></app-delete-account></span>
+    <span *ngIf="active_tab === 'faq'"><app-faq></app-faq></span>
 
 
 	<!--<div class="container" fxLayout="row" fxLayoutAlign="center center" style="padding-top: 20px;">-->
@@ -188,3 +151,4 @@
 
 
 </div>
+</mat-sidenav-container>
