--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 footer-share">
           <!--Grepolis is a browser game by InnoGames GmbH. This is an unofficial 3rd party site-->
           <share-buttons [theme]="'material-light'"
-                         [include]="['facebook','twitter','whatsapp','copy']"
+                         [include]=['facebook','twitter','whatsapp','copy']"
                          [showText]="true"
                          [show]="4"
                          [size]="4"
