--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -71,6 +71,10 @@ hr {
     //color: #fff !important;
 }
 
+.search {
+  margin: 0 !important;
+}
+
 .hidden-search-control {
     display: none !important;
 }
