--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -77,7 +77,7 @@ $themecolor-dark: #028ee1;
 $danger: #fc4b6c;
 $success: #26c6da;
 $warning: #ffb22b;
-$primary: #7460ee;
+$primary: #18bc9c;
 $info: #1e88e5;
 $inverse: #2f3d4a;
 $muted: #99abb4;
